# Database-Course-Practice

./: CMakeLists.txt  PROJECT_SUMMARY.md  README.md
config/: config.json
database/: init_data.sql  schema.sql
docs/: 功能需求细化  功能需求细化.md  数据流图DFD.md  需求分析.md  需求分析2.0.md
docs/api/: api_documentation.md
docs/design/: database_design.md  system_architecture.md
docs/task/: 数据库需求分析.doc
include/: common.h
include/core/class/: class_manager.h
include/core/finance/: finance_manager.h
include/core/notification/: notification_manager.h
include/core/study/: study_manager.h
include/core/user/: user_manager.h
include/database/: database_connector.h
include/db/: connection_pool.h
include/lock/: lock.hpp
include/log/: block_queue.hpp  log.hpp
include/mysql/: README.md  sql_connection_pool.hpp
include/utils/: config_loader.h  logger.h  validator.h
include/web/: server.h
scripts/: build.sh  run.sh  setup_database.sh
src/: CMakeLists.txt  main.cpp  sql_connection_pool.cpp
src/core/class/: class_manager.cpp
src/core/finance/: finance_manager.cpp
src/core/notification/: notification_manager.cpp  notification_manager_continued.cpp
src/core/study/: study_manager.cpp
src/core/user/: user_manager.cpp
src/database/: database_connector.cpp
src/utils/: config_loader.cpp  crypto_utils.cpp  logger.cpp  string_utils.cpp  time_utils.cpp
src/web/: server.cpp  server_continued.cpp
tests/unit/: test_user_manager.cpp
